--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "morgan": "^1.10.0",
+    "mysql2": "^3.14.3",
     "prettier": "^3.6.2"
   },
   "devDependencies": {
