--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.3",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
