--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "mongoose": "^8.16.3",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
-    "mysql2": "^3.14.3",
+    "mysql2": "^3.15.0",
     "prettier": "^3.6.2",
+    "sequelize": "^6.37.7",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
